# my_project

./: README.md  pyproject.toml
src/my_project/: main.py
