[project]
name = "my_project"
version = "0.1.0"
description = "my_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
kickoff = "my_project.main:kickoff"
run_crew = "my_project.main:kickoff"
plot = "my_project.main:plot"
run_with_trigger = "my_project.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
